--- a/index.html
+++ b/index.html
@@ -3,99 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CastroHub | Home</title>
+  <title>CastroHub - Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/a2e0e6ad65.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    .hero-bg { background: linear-gradient(135deg, #2563eb, #9333ea); }
+    .hero-bg { background: linear-gradient(135deg,#2563eb,#9333ea); }
     .card:hover { transform: translateY(-5px); transition: all 0.3s; }
-    .nav-link:hover { color: #6366f1; }
+    .social-icon:hover { color: #f59e0b; }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen">
+<body class="bg-gray-50 flex flex-col min-h-screen">
 
   <!-- Navbar -->
-  <header class="bg-white shadow-md sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-indigo-700 tracking-wide">CastroHub</h1>
-      
-      <!-- Hamburger -->
-      <button id="menu-toggle" class="md:hidden text-2xl focus:outline-none">
-        ☰
-      </button>
-
-      <!-- Menu Links -->
-      <ul id="nav-links" class="hidden md:flex gap-6 font-medium">
-        <li><a href="index.html" class="text-indigo-700 font-bold">Home</a></li>
-        <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="news.html" class="nav-link">News</a></li>
-        <li><a href="entertainment.html" class="nav-link">Entertainment</a></li>
-        <li><a href="education.html" class="nav-link">Education</a></li>
-        <li><a href="projects.html" class="nav-link">Projects</a></li>
-        <li><a href="mindspark.html" class="nav-link">MindSpark TV</a></li>
-        <li><a href="contact.html" class="nav-link">Contact</a></li>
-      </ul>
+  <header class="bg-white shadow-lg sticky top-0 z-50">
+    <div class="container mx-auto flex justify-between items-center py-4 px-6 flex-wrap">
+      <h1 class="text-2xl font-bold text-indigo-700">CastroHub</h1>
+      <button id="menuToggle" class="block md:hidden text-indigo-700 text-2xl focus:outline-none">&#9776;</button>
+      <nav id="navMenu" class="hidden md:flex w-full md:w-auto mt-4 md:mt-0">
+        <ul class="flex flex-col md:flex-row md:space-x-6 gap-2 md:gap-0">
+          <li><a href="index.html" class="font-semibold text-indigo-700">Home</a></li>
+          <li><a href="about.html" class="hover:text-indigo-600">About</a></li>
+          <li><a href="news.html" class="hover:text-indigo-600">News</a></li>
+          <li><a href="entertainment.html" class="hover:text-indigo-600">Entertainment</a></li>
+          <li><a href="education.html" class="hover:text-indigo-600">Education</a></li>
+          <li><a href="projects.html" class="hover:text-indigo-600">Projects</a></li>
+          <li><a href="mindspark.html" class="hover:text-indigo-600">MindSpark TV</a></li>
+          <li><a href="contact.html" class="hover:text-indigo-600">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section class="hero-bg text-white text-center py-24 px-6">
     <h2 class="text-5xl font-bold mb-4">Welcome to CastroHub</h2>
-    <p class="text-lg md:text-xl mb-6">Your hub for News, Entertainment, Education, Projects, and MindSpark TV—all in one place.</p>
-    <a href="#sections" class="bg-white text-indigo-700 px-6 py-3 font-semibold rounded-lg shadow hover:bg-gray-100 transition">Explore Now</a>
+    <p class="text-lg md:text-xl max-w-2xl mx-auto mb-6">Your go-to hub for news, entertainment, education, projects, and AI-powered insights.</p>
+    <a href="news.html" class="bg-white text-indigo-700 font-semibold px-6 py-3 rounded-lg hover:bg-gray-100">Explore News</a>
   </section>
 
-  <!-- Feature Sections -->
-  <section id="sections" class="max-w-7xl mx-auto px-6 py-16 grid md:grid-cols-3 gap-8">
-    <div class="card bg-white shadow-lg rounded-lg p-6 text-center">
-      <div class="text-indigo-600 text-4xl mb-4">📰</div>
-      <h3 class="text-xl font-bold mb-2">Latest News</h3>
-      <p class="text-gray-600 mb-4">Stay informed with the latest updates across all categories: Tech, Education, Lifestyle, Sports, and more.</p>
-      <a href="news.html" class="text-indigo-600 font-semibold hover:underline">Read News →</a>
-    </div>
-    <div class="card bg-white shadow-lg rounded-lg p-6 text-center">
-      <div class="text-pink-600 text-4xl mb-4">🎬</div>
-      <h3 class="text-xl font-bold mb-2">Entertainment</h3>
-      <p class="text-gray-600 mb-4">Enjoy trending videos, memes, music, and more from the world of entertainment.</p>
-      <a href="entertainment.html" class="text-pink-600 font-semibold hover:underline">Watch Now →</a>
-    </div>
-    <div class="card bg-white shadow-lg rounded-lg p-6 text-center">
-      <div class="text-green-600 text-4xl mb-4">🎓</div>
-      <h3 class="text-xl font-bold mb-2">Education</h3>
-      <p class="text-gray-600 mb-4">Access tutorials, courses, and AI-powered learning tools to boost your knowledge.</p>
-      <a href="education.html" class="text-green-600 font-semibold hover:underline">Learn More →</a>
-    </div>
-  </section>
+  <!-- Featured Sections -->
+  <section class="container mx-auto px-6 py-16 grid md:grid-cols-2 gap-12">
 
-  <!-- Projects & MindSpark -->
-  <section class="max-w-7xl mx-auto px-6 py-16 grid md:grid-cols-2 gap-8">
-    <div class="card bg-white shadow-lg rounded-lg p-6">
-      <h3 class="text-2xl font-bold mb-2">🚀 Projects</h3>
-      <p class="text-gray-600 mb-4">Explore my personal projects, AI experiments, and interactive applications.</p>
-      <a href="projects.html" class="text-indigo-700 font-semibold hover:underline">See Projects →</a>
+    <!-- News -->
+    <div class="bg-white rounded-lg shadow p-6 hover:shadow-xl transition">
+      <h3 class="text-2xl font-bold mb-4">Latest News</h3>
+      <p class="text-gray-600 mb-4">Stay updated with tech, lifestyle, sports, and global news.</p>
+      <a href="news.html" class="text-indigo-600 font-semibold hover:underline">View News →</a>
     </div>
-    <div class="card bg-white shadow-lg rounded-lg p-6">
-      <h3 class="text-2xl font-bold mb-2">📺 MindSpark TV</h3>
-      <p class="text-gray-600 mb-4">Watch trending videos and curated content powered by AI recommendations.</p>
-      <a href="mindspark.html" class="text-indigo-700 font-semibold hover:underline">Watch Now →</a>
+
+    <!-- Entertainment -->
+    <div class="bg-white rounded-lg shadow p-6 hover:shadow-xl transition">
+      <h3 class="text-2xl font-bold mb-4">Entertainment</h3>
+      <p class="text-gray-600 mb-4">Watch trending videos, music, memes, and AI suggestions.</p>
+      <a href="entertainment.html" class="text-pink-600 font-semibold hover:underline">Explore Entertainment →</a>
+    </div>
+
+    <!-- Education -->
+    <div class="bg-white rounded-lg shadow p-6 hover:shadow-xl transition">
+      <h3 class="text-2xl font-bold mb-4">Education</h3>
+      <p class="text-gray-600 mb-4">Access resources, revision notes, past papers, and AI-powered tutor.</p>
+      <a href="education.html" class="text-green-600 font-semibold hover:underline">Go to Education →</a>
+    </div>
+
+    <!-- Projects -->
+    <div class="bg-white rounded-lg shadow p-6 hover:shadow-xl transition">
+      <h3 class="text-2xl font-bold mb-4">Projects</h3>
+      <p class="text-gray-600 mb-4">Explore web apps, AI experiments, and creative projects.</p>
+      <a href="projects.html" class="text-yellow-600 font-semibold hover:underline">View Projects →</a>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-400 py-6 mt-auto text-center">
-    <p>&copy; 2025 CastroHub. All Rights Reserved.</p>
-    <p>Contact: <a href="mailto:castrodhiambo3@gmail.com" class="text-indigo-400">castrodhiambo3@gmail.com</a> | WhatsApp: 0759130506</p>
+  <footer class="bg-gray-900 text-gray-300 py-6 mt-auto text-center">
+    <div class="container mx-auto flex flex-col md:flex-row justify-between items-center px-6">
+      <p>&copy; 2025 CastroHub. All rights reserved.</p>
+      <div class="flex gap-4 mt-2 md:mt-0">
+        <a href="#" class="social-icon text-gray-300 text-2xl"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="social-icon text-gray-300 text-2xl"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="social-icon text-gray-300 text-2xl"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="social-icon text-gray-300 text-2xl"><i class="fab fa-youtube"></i></a>
+        <a href="#" class="social-icon text-gray-300 text-2xl"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
   </footer>
 
-  <!-- Scripts -->
   <script>
-    const menuToggle = document.getElementById("menu-toggle");
-    const navLinks = document.getElementById("nav-links");
-
-    menuToggle.addEventListener("click", () => {
-      navLinks.classList.toggle("hidden");
-    });
+    // Mobile menu toggle
+    const menuToggle = document.getElementById('menuToggle');
+    const navMenu = document.getElementById('navMenu');
+    menuToggle.addEventListener('click', () => navMenu.classList.toggle('hidden'));
   </script>
+
 </body>
 </html>
